.config/wal/templates/waybar.css
* {{
	font-family: "JetBrainsMono Nerd Font Mono";
	font-size: 13px;
	min-height: 0;
}}
window#waybar {{
	background: rgba(12, 12, 12, 0.0);
}}

tooltip {{
	background: {background};
	color: {foreground};
}}

.module {{
	margin: 4px 0 4px 0;
	background: {background};
	border-radius: 15px;
	padding: 0 9px 0 9px;
	transition-duration: .25s;
	min-width: 15px;
}}

.modules-left {{
	color: {color1};
	margin-left: 10px;
}}

.modules-middle {{
	color: {color1};
}}

.modules-right {{
	color: {color1};
	margin-right: 10px;
}}

#custom-terminal:hover,
#custom-fileexplorer:hover,
#custom-browser:hover,
#custom-discord:hover,
#custom-steam:hover {{
	background-color: {color1};
	color: {background};
}}

#window {{
	min-width: 14px;
}}

#window label {{
	padding: 0 3px 0 3px;
}}

#workspaces {{
	padding: 0 3px 0 3px;
}}

#workspaces button {{
	color: {color1};
	border: none;
	border-radius: 15px;
	transition-duration: 0.3s;
	margin: 3px;
	box-shadow: none;
	text-shadow: none;
}}

#workspaces button.active {{
	color: {background};
	background: {color1};
	padding-left: 15px;
	padding-right: 15px;
}}

#workspaces button:hover {{
	color: {background};
	background: {color1};
	padding-left: 15px;
	padding-right: 15px;
	border-radius: 15px;
}}

#privacy {{
	color: {color1};
	margin: 4px 0 4px 0;
	background: {background};
	border-radius: 15px;
	padding: 0 9px 0 9px;
}}

